# roctet

./: .gitignore  LICENSE  README.md  great-docs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: demo.ipynb
src/quroctet/: __init__.py  core.py  curves.py  scores.py  utils.py
src/roctet/: __init__.py  core.py  curves.py  scores.py  utils.py
tests/: test_curves.py  test_integration.py  test_reproducibility.py  test_scores.py  test_utils.py
user_guide/: 00-basic-demo.qmd
