[project]
name = "quroctet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Emily Riederer", email = "emilyriederer@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.2",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "scipy>=1.17.1",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "plotnine>=0.15.3",
    "pytest>=9.0.2",
]
